虚拟dom与真实dom的区别

--- a/02_虚拟dom的两种创建方式/2_使用js创建虚拟DOM.html
+++ b/02_虚拟dom的两种创建方式/2_使用js创建虚拟DOM.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>1_使用jsx创建虚拟DOM</title>
+    <title>2_使用js创建虚拟DOM</title>
 </head>
 <body>
 
