jsx的语法规则

--- a/03_jsx的语法规则/jsx语法规则.html
+++ b/03_jsx的语法规则/jsx语法规则.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>3_虚拟dom与真实dom</title>
+    <title>jsx的语法规则</title>
     <style>
         .red{
             color: red;
