--- a/复习/1_类的基本知识.html
+++ b/复习/1_类的基本知识.html
@@ -54,6 +54,19 @@
         const s1 = new Student('小张', 20, '高一')
         console.log(s1)
         s1.speak()
+
+
+        class Car {
+            constructor(name, price){
+                this.name = name
+                this.price = price
+            }
+
+            //类中可以直接写赋值语句，如下代码的含义是：给Car的实例对象添加一个属性，名为a，值为1
+            wheel = 4
+        }
+        const c1 = new Car('奔驰', 199)
+        console.log(c1)
     </script>
 </body>
 </html>
