--- a/07_组件实例三大属性2_props/2_对props进行基本限制.html
+++ b/07_组件实例三大属性2_props/2_对props进行基本限制.html
@@ -18,12 +18,14 @@
     <script type="text/javascript" src="../js/react-dom.development.js"></script>
     <!-- 引入babel 用于将jsx转为js -->
     <script type="text/javascript" src="../js/babel.min.js"></script>
+    <!-- 引入prop-types 用于对组件标签属性进行限制 -->
+    <script type="text/javascript" src="../js/prop-types.js"></script>
 
     <script type="text/babel">
        //创建组件
        class Person extends React.Component{
            render(){
-               const {name, age, sex} = this.props
+               const {name, age, sex, speak} = this.props
                return (
                     <ul>
                         <li>姓名：{name}</li>
@@ -34,14 +36,31 @@
            }
        }
 
-       //渲染组件到页面
-       ReactDOM.render(<Person name="jerry" age={19} sex ="男" />, document.getElementById('test1'))
-       ReactDOM.render(<Person name="tom" age={18} sex ="女" />, document.getElementById('test2'))
+       //对标签属性进行类型、必要性的限制
+       Person.propTypes = {
+           name: PropTypes.string.isRequired,//限制name必传，且为字符串
+           name: PropTypes.string,//限制sex为字符串
+           age : PropTypes.number,//限制age为数值
+           speak: PropTypes.func,//限制speak为函数
+       }
 
+       //渲染组件到页面
+       Person.defaultProps = {
+           sex: '男', //sex默认值为男
+           age: 18//age默认值为18
+       }
+
+       //渲染组件到页面
+       ReactDOM.render(<Person name="jerry"  sex ="男" speak={speak}/>, document.getElementById('test1'))
+       ReactDOM.render(<Person name="tom" age={18}  />, document.getElementById('test2'))
 
        const p = {name:"老刘",age:18,sex:"女"}
     //    ReactDOM.render(<Person name={p.name} age={p.age} sex={p.sex}/>, document.getElementById('test3'))
        ReactDOM.render(<Person {...p}/>, document.getElementById('test3'))
+
+       function speak(){
+           console.log(this)
+       }
     </script>
     
 </body>
