--- a/07_组件实例三大属性2_props/3_props的简写方式.html
+++ b/07_组件实例三大属性2_props/3_props的简写方式.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>hello_react</title>
+    <title>3_props的简写方式</title>
 </head>
 <body>
 
@@ -26,9 +26,6 @@
        class Person extends React.Component{
            render(){
                const {name, age, sex, speak} = this.props
-
-               //props是只读的
-            //    this.props.name = 'aaa'//此行代码会报错，因为props是只读的
                return (
                     <ul>
                         <li>姓名：{name}</li>
@@ -37,22 +34,23 @@
                     </ul>
                )
            }
+
+            //对标签属性进行类型、必要性的限制
+            static propTypes = {
+                name: PropTypes.string.isRequired,//限制name必传，且为字符串
+                name: PropTypes.string,//限制sex为字符串
+                age : PropTypes.number,//限制age为数值
+                speak: PropTypes.func,//限制speak为函数
+            }
+
+            //渲染组件到页面
+            static defaultProps = {
+                sex: '男', //sex默认值为男
+                age: 18//age默认值为18
+            }
        }
 
-       //对标签属性进行类型、必要性的限制
-       Person.propTypes = {
-           name: PropTypes.string.isRequired,//限制name必传，且为字符串
-           name: PropTypes.string,//限制sex为字符串
-           age : PropTypes.number,//限制age为数值
-           speak: PropTypes.func,//限制speak为函数
-       }
-
-       //渲染组件到页面
-       Person.defaultProps = {
-           sex: '男', //sex默认值为男
-           age: 18//age默认值为18
-       }
-
+       
        //渲染组件到页面
        ReactDOM.render(<Person name="jerry"  sex ="男" speak={speak}/>, document.getElementById('test1'))
        ReactDOM.render(<Person name="tom" age={18}  />, document.getElementById('test2'))
