08_组件实例的三大属性3_refs

--- a/复习/3_类中方法this指向.html
+++ b/复习/3_类中方法this指向.html
@@ -21,14 +21,22 @@
         const p1 = new Person('tom', 18)
         p1.speak()//通过实例调用speak方法
 
-        const x = p1.study
+        const x = p1.speak
         x()//类中定义的方法在局部开启了严格模式
 
+        
         function demo(){
             'use strict'//undefined
-            console.log(this)
+            console.log('demo', this)
         }
         demo()
+
+        //箭头函数this指向定义的位置
+        const demo2 = () => {
+            'use strict'
+            console.log('demo2', this)
+        }
+        demo2()
     </script>
 </body>
 </html>
