2_回调函数形式的ref

--- a/08_组件实例的三大属性3_refs/1_字符串形式的ref.html
+++ b/08_组件实例的三大属性3_refs/1_字符串形式的ref.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>hello_react</title>
+    <title>1_字符串形式的ref</title>
 </head>
 <body>
 
