1_非受控组件

--- a/10_react中收集表单数据/1_非受控组件.html
+++ b/10_react中收集表单数据/1_非受控组件.html
@@ -24,7 +24,7 @@
             handleSubmit = (event) => {
                 event.preventDefault()//阻止表单提交
                 const {username, password} = this
-                alert(`您输入的账户名是:${username.value}, 您输入的密码是:${password.value}`)
+                alert(`您输入的账户名是:${username.value}, 您输入的密码是:${password.value}`)//现取现用
             }
 
             render(){
