--- a/11_高阶函数_函数柯里化/1_高阶函数_函数柯里化.html
+++ b/11_高阶函数_函数柯里化/1_高阶函数_函数柯里化.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>高阶函数_函数柯里化</title>
+    <title>1_高阶函数_函数柯里化</title>
 </head>
 
 <body>
@@ -28,6 +28,15 @@
                     常见的高阶函数有：Promise、setTimeout、arr.map() 等等
 
                 函数的柯里化：通过函数调用继续返回函数的方式，实现多次接收参数最后统一处理的函数编码形式。
+                function sum1(a) {
+                    return (b) => {
+                        return (c) => {
+                            return a + b + c
+                        }
+                    }
+                }
+                const result1 = sum1(1)(2)(3)
+                console.log(result1)
             */
         //#endregion
 
