react生命周期(旧)

--- a/12_组件的生命周期/2_react生命周期(旧).html
+++ b/12_组件的生命周期/2_react生命周期(旧).html
@@ -89,6 +89,7 @@
             }
         }
 
+        //父组件A
         class A extends React.Component{
             
             state = { carName : '奔驰'}
@@ -107,6 +108,7 @@
             }
         }
 
+        //子组件B
         class B extends React.Component{
             //组件将要接受新的钩子
             componentWillReceiveProps(props){
