react生命周期(旧)

--- a/12_组件的生命周期/2_react生命周期(旧).html
+++ b/12_组件的生命周期/2_react生命周期(旧).html
@@ -18,6 +18,21 @@
     <script type="text/javascript" src="../js/babel.min.js"></script>
 
     <script type="text/babel">
+        /* 
+        生命周期的三个阶段（旧）
+        1. 初始化阶段: 由ReactDOM.render()触发---初次渲染
+            1.constructor()
+            2.componentWillMount()
+            3.render()
+            4.componentDidMount()
+        2. 更新阶段: 由组件内部this.setSate()或父组件重新render触发
+            1.shouldComponentUpdate()
+            2.componentWillUpdate()
+            3.render()
+            4.componentDidUpdate()
+        3. 卸载组件: 由ReactDOM.unmountComponentAtNode()触发
+            1.componentWillUnmount()
+ */
         //创建组件
         class Count extends React.Component{
             
