--- a/复习/5_对象相关的知识.html
+++ b/复习/5_对象相关的知识.html
@@ -14,6 +14,11 @@
         let obj = {} //{name: 'tom'}
         obj[a] = 'tom'
         console.log(obj)
+
+
+        let obj1 = {a:1, b:2}
+        let obj2 = {...obj1, b:3}
+        console.log('-=-->', obj2)
     </script>
 </body>
 </html>
