--- a/react-staging/public/index.html
+++ b/react-staging/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <style>
+        .zhubaiming{
+            background-color:brown !important;
+            color:black !important;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
